--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -30,12 +30,13 @@
 \newcommand\TM{$^{\tiny{\textsf{TM}}}$}
 \begin{document}
 
-{\sffamily{\bfseries\Large Open Source Best Practices}\\
-Series of lectures by \href{https://www.yegor256.com}{Yegor Bugayenko} to be presented
-to students of \href{https://innopolis.university/en/}{Innopolis University} in 2023--2024.
-% and \href{https://www.youtube.com/playlist?list=PLaIsQH4uc08woJKRAA7mmjs9fU0jeKjjM}{video recorded}}
+{\sffamily{\bfseries\Large Open Source Best Practices (OSBP)}
 
-The entire set of slide decks is in the \href{https://github.com/yegor256/osbp}{yegor256/osbp} GitHub repository.
+Series of lectures by \href{https://www.yegor256.com}{Yegor Bugayenko} \\
+To be presented to students of \href{https://innopolis.university/en/}{Innopolis University} in 2023--2024
+% and \href{https://www.youtube.com/playlist?list=PLaIsQH4uc08woJKRAA7mmjs9fU0jeKjjM}{video recorded}}
+\\
+The entire set of slide decks is in the \href{https://github.com/yegor256/osbp}{yegor256/osbp} GitHub repository
 
 \begin{abstract}
 At the course, students will learn how to interact with other programmers
@@ -87,8 +88,8 @@ and effectively.
 
 \textbf{What's the methodology?}\\
 There are eight lectures, each of which is a summary of best practices,
-as the teacher sees them, according to his personal experience of
-working with software development projects in GitHub and outside of it.
+as \href{https://www.kaicode.org}{Kaicode},
+an open source festival organized and sponsored by Yegor since 2015, sees them.
 In laboratory classes, students either write student research papers
 or submit pull requests to GitHub repositories suggested by the teacher.
 Groups that wrote the best papers will be encouraged to submit them
@@ -114,11 +115,14 @@ After the course, students \emph{hopefully} will understand:
 \item How to make their bug reports appreciated?
 \item How to make their pull requests merged?
 \item How to reject a pull request politely?
+\item How to become an active contributor of a large repository?
 \item How to keep up with GitHub etiquette?
 \item How to invite and motivate contributors?
+\item How to deal with frustration during code reviews?
 \item How to avoid stale pull requests (never merged)?
 \item How to use GitHub Actions effectively?
 \item How to format the \texttt{README.md} file?
+\item How to control quality and avoid chaos in a public repository?
 \item How to use GitHub account in lieu of a C.V.?
 \item How to get 100 stars?
 \item How to release in one click?
@@ -134,7 +138,7 @@ The following lectures constitute the course:
 \newlist{lectures}{enumerate}{10}
 \setlist[lectures]{label*=\arabic*.}
 \begin{lectures}
-\item Discussing
+\item Debating
 \item Reporting Bugs
 \item Making Changes
 \item Reviewing Changes
@@ -148,6 +152,15 @@ At laboratory classes, organized by a Teaching Assistant (TA),
 students either make pull requests to
 GitHub repositories suggested by the teacher, or write sections
 for their research papers.
+
+Most probably, one of the following repositories will be suggested
+by the teacher for contribution during the course:
+\href{https://github.com/yegor256/cam}{yegor256/cam},
+\href{https://github.com/yegor256/rultor}{yegor256/rultor},
+\href{https://github.com/yegor256/qulice}{yegor256/qulice},
+\href{https://github.com/cqfn/jpeek}{cqfn/jpeek},
+and
+\href{https://github.com/objectionary/eo}{objectionary/eo}.
 
 \newpage
 \section*{Grading}
