--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -39,18 +39,16 @@ To be presented to students of \href{https://innopolis.university/en/}{Innopolis
 The entire set of slide decks is in the \href{https://github.com/yegor256/osbp}{yegor256/osbp} GitHub repository
 
 \begin{abstract}
-At the course, students will learn how to interact with other programmers
-in open source GitHub repositories, such that pull requests integrate seamlessly,
-reputation grows, popularity of repositories increases, and satisfaction
-of being an open source contributor materializes. This skill may help students
-in their work with proprietary repositories too, especially when teams
-are remotely distributed.
+In the course, students will learn how to interact with other programmers in open source GitHub repositories, ensuring that pull requests integrate seamlessly, reputation grows, the popularity of repositories increases, and the satisfaction of being an open source contributor materializes. This skill may also help students in their work with proprietary repositories, especially when teams are remotely distributed.
 \end{abstract}
 
 \textbf{What is the goal?}\\
-This course introduces some best practices of GitHub-based software development,
-which eventually may help students gain 10K stars at their own repositories.
+This course introduces best practices for GitHub-based software development, which may eventually help students gain 10,000 stars in their own repositories.
 
+\begin{wrapfigure}{r}{1.2in}%
+\raggedleft%
+\includegraphics[width=1.2in]{photo.jpg}%
+\end{wrapfigure}
 \textbf{Who is the teacher?}\\
 Yegor is developing software for more than 30 years, being a hands-on programmer
 (see his GitHub account with 4.5K followers: \href{https://github.com/yegor256}{@yegor256})
@@ -75,28 +73,10 @@ and
 (all videos are available).
 
 \textbf{Why this course?}\\
-Writing code is the so-called ``hard skill'' that most students are
-very advanced at, when they graduate their bachelor or master programs.
-However, they usually lack experience in open source development, where
-teams are distributed, team members are not closely related to each other,
-and quality expectations are higher than in co-located teams that
-work with proprietary code bases. Introducing students to the so-called
-``soft skills'' may be beneficial to the projects that they will join
-after graduation: students will understand the dynamics and mechanics
-of software engineering much better and will contribute more fluently
-and effectively.
+Writing code is the so-called ``hard skill'' that most students are very advanced in when they graduate from their bachelor's or master's programs. However, they usually lack experience in open source development, where teams are distributed, team members are not closely related to each other, and quality expectations are higher than in co-located teams working with proprietary codebases. Introducing students to the so-called ``soft skills'' may be beneficial to the projects they will join after graduation. Students will understand the dynamics and mechanics of software engineering much better and will contribute more fluently and effectively.
 
 \textbf{What's the methodology?}\\
-There are eight lectures, each of which is a summary of best practices,
-as \href{https://www.kaicode.org}{Kaicode},
-an open source festival organized and sponsored by Yegor since 2015, sees them.
-In laboratory classes, students either write student research papers
-or submit pull requests to GitHub repositories suggested by the teacher.
-Groups that wrote the best papers will be encouraged to submit them
-to \href{http://www.icse-conferences.org/}{ICSE},
-\href{https://www.esec-fse.org/}{ESEC/FSE}, or a similar A* conference
-(student or NIER tracks); the teacher will help them prepare the papers
-accordingly.
+There are eight lectures, each a summary of best practices as seen by \href{https://www.kaicode.org}{Kaicode}, an open source festival organized and sponsored by Yegor since 2015. In laboratory classes, students either write research papers or submit pull requests to GitHub repositories suggested by the teacher. Groups that write the best papers will be encouraged to submit them to \href{http://www.icse-conferences.org/}{ICSE}, \href{https://www.esec-fse.org/}{ESEC/FSE}, or a similar A* conference (student or NIER tracks); the teacher will help them prepare the papers accordingly.
 
 \newpage
 \section*{Course Structure}
@@ -215,9 +195,9 @@ Attended a lecture & +2 & 8 \\
 Attended a lab & +2 & 8 \\
 Merged a pull request to a suggested repo & +4 & 32 \\
 Reviewed a paper of another group & +3 & 9 \\
-``Method'' section (\href{}{guideline}) & +8 \\
-``Related Work'' section (\href{}{guideline}) & +12 \\
-``Results'' and ``Discussion'' sections (\href{}{guideline}) & +12 \\
+``Method'' section (\href{https://www.yegor256.com/2023/10/11/method-of-research.html}{guideline}) & +8 \\
+``Related Work'' section (\href{https://www.yegor256.com/2023/09/29/how-to-write-related-work-section.html}{guideline}) & +12 \\
+``Results'' and ``Discussion'' sections (\href{https://www.yegor256.com/2023/12/11/results-and-discussion.html}{guideline}) & +12 \\
 ``Conclusion'' & +6 \\
 ``Introduction'' section & +6 \\
 ``Abstract'' and Title & +4 \\
