--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -23,6 +23,7 @@
 \documentclass[nobrand,anonymous,nodate,nosecurity]{huawei}
 \usepackage{enumerate}
 \usepackage{multicol}
+\usepackage{wrapfig}
 \usepackage{href-ul}
 \usepackage{ffcode}
 \usepackage{paralist}
@@ -108,6 +109,7 @@ After the course, students \emph{hopefully} will understand:
 \item How to release in one click?
 \item How to employ ChatGPT as a coding companion?
 \item How to get 10K stars?
+\item How to earn money via open source?
 \end{itemize}
 
 \newpage
