--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -115,7 +115,7 @@ After the course, students \emph{hopefully} will understand:
 \newpage
 \section*{Lectures \& Labs}
 
-The following lectures constitute the course:
+The following 80-minute lectures constitute the course:
 
 \newlist{lectures}{enumerate}{10}
 \setlist[lectures]{label*=\arabic*.}
