--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -27,18 +27,29 @@
 
 \plush{\osbpTitlePage{1}{}}
 
-\thought{.}
+\pitch{.}
 
-% talk to one person
+% talk to one person (address your comments to a nickname)
 % provide links to your opinions
 % make avatar
 % fill up your profile
 % please, thanks, sorry
-%
+% stay online, don't discuss offline
 
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
+\qte
+  {karl-fogel}
+  {Most free software projects fail.}
+  {fogel2005producing}
+
+\qte
+  {pope-francis}
+  {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 lovebirds that the recipe for success lies in saying three simple words: `Please, thanks and sorry.'{}}
+  {pope2014}
+
+\qte
+  [Kristine Nowak]
+  {kristine-nowak}
+  {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
+  {nowak2005influence}
 
 \end{document}
