--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -27,14 +27,12 @@
 
 \plush{\osbpTitlePage{3}{}}
 
-\thought{.}
+\pitch{.}
 
 % make small pull requests
-%
+% one fix per one PR
+% ping architect in pull request
 
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
+% https://www.yegor256.com/2020/07/29/open-source-etiquette.html
 
 \end{document}
