--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -27,14 +27,14 @@
 
 \plush{\osbpTitlePage{4}{}}
 
-\thought{.}
+\pitch{.}
 
 % when and how we reject PRs?
 %
 
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
+\qte
+  {eric-raymond}
+  {Good programmers know what to write. Great ones know what to rewrite (and reuse).}
+  {raymond1999cathedral}
 
 \end{document}
