--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -27,15 +27,10 @@
 
 \plush{\osbpTitlePage{5}{}}
 
-\thought{.}
+\pitch{.}
 
 % how to contribute
 % style checking
 % style guides
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
 
 \end{document}
