--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -27,14 +27,9 @@
 
 \plush{\osbpTitlePage{6}{}}
 
-\thought{.}
+\pitch{.}
 
 % configure CI in Github
 % how it works in other systems? Gitlab
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
 
 \end{document}
