--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -27,13 +27,8 @@
 
 \plush{\osbpTitlePage{7}{}}
 
-\thought{.}
+\pitch{.}
 
 % auto generate release notes
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
 
 \end{document}
