--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -27,18 +27,14 @@
 
 \plush{\osbpTitlePage{8}{}}
 
-\thought{.}
+\pitch{.}
 
-% talk to one person
-% provide links to your opinions
-% make avatar
-% fill up your profile
-% please, thanks, sorry
+% make nice README
 %
 
 \plush{
   \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
+  \href{https://www.yegor256.com/2019/04/23/elegant-readme.html}{Elegant READMEs} (2019)\par
 }
 
 \end{document}
