--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -34,7 +34,7 @@
 {\sffamily{\bfseries\Large Open Source Best Practices (OSBP)}
 
 Series of lectures by \href{https://www.yegor256.com}{Yegor Bugayenko} \\
-To be presented to students of \href{https://innopolis.university/en/}{Innopolis University} in 2023--2024
+To be presented to students of \href{https://innopolis.university/en/}{Innopolis University} in 2024
 % and \href{https://www.youtube.com/playlist?list=PLaIsQH4uc08woJKRAA7mmjs9fU0jeKjjM}{video recorded}}
 \\
 The entire set of slide decks is in the \href{https://github.com/yegor256/osbp}{yegor256/osbp} GitHub repository
