--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -27,14 +27,9 @@
 
 \plush{\osbpTitlePage{2}{}}
 
-\thought{.}
+\pitch{.}
 
 % one problem per bug
 % make it sound scary
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{}{} (2017)\par
-}
 
 \end{document}
