--- a/osbp.sty
+++ b/osbp.sty
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{ssd}[00.00.0000 0.0.0 This Course Specials]
+\ProvidesPackage{osbp}[00.00.0000 0.0.0 This Course Specials]
 
 \RequirePackage[T1]{fontenc}
 \RequirePackage[utf8]{inputenc}
@@ -29,41 +29,8 @@
 \RequirePackage[static]{clicks}
 \RequirePackage[template,scheme=light]{ppt-slides}
 \RequirePackage[nocn]{ffcode}
-\RequirePackage{bussproofs}
-  \def\extraVskip{12pt}
-  \def\ruleScoreFiller{\hrule height 1pt}
-  % \def\proofSkipAmount{\vskip 6pt plus.8ex minus.4ex}
-\RequirePackage{bm}
-\RequirePackage{amsmath}
-\RequirePackage{amssymb}
-\RequirePackage{graphicx}
-  \graphicspath{{../images/}}
-
-\RequirePackage{mathtools}
-\RequirePackage{to-be-determined}
-\RequirePackage{tikz}
-  \usetikzlibrary{positioning,calc,arrows.meta}
+\RequirePackage{calc}
 \RequirePackage{soul}
-\renewcommand\emph[1]{\ul{#1}}
-\tikzstyle{graph} = [
-  node distance=6em,
-  every node/.style={font={\Large\ttfamily}, outer sep=.5em, draw=black, rectangle, minimum width=2.2em, line width=.1em},
-  every path/.style={draw=black, line width=.1em},
-  every edge/.append style={draw=black, line width=.1em, -{Latex[length=2.5mm,width=2mm]}, every node/.style={above}},
-  every loop/.append style={draw=black, line width=.1em, -{Latex[length=2.5mm,width=2mm]}, every node/.style={above}},
-]
-
-\usepackage{listofitems}
-\newcounter{question}
-\newcommand\osbpQuestion[6]{%
-  \plush{\begin{pptMiddle}%
-  \stepcounter{question}%
-  \textbf{\textcolor{orange}{\Large\thequestion.}} #1\par%
-  \begin{enumerate}\item #2 \item #3 \item #4 \item #5 \end{enumerate}\par%
-  \readlist*\tags{#6}%
-  \foreachitem\tag\in\tags[]{\textcolor{lightgray}{\#\tag{}} }%
-  \end{pptMiddle}}%
-}
 
 \newcommand\osbpTitlePage[2]{\begin{pptMiddle}%
   \pptTitle{\thetitle}{}\par
@@ -77,16 +44,24 @@
   \fi%
 \end{pptMiddle}}
 
-\newcommand\nospell[1]{#1}
-\newcounter{thght}
-\newcommand\thought[1]{
-  \addtocounter{thght}{1}
-  \plush{\pptThought{\raggedright\textcolor{orange}{\Huge\thethght.} #1}}
-}
+\newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
+\newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\textcolor{gray}{#1}]{../faces/#2.jpg}{#3}{\small\bibentry{#4}}}}
 
 \AtBeginDocument{%
   \pptLeft{\thetitle{}}%
   \pptRight{@yegor256}%
+  \nobibliography*
+  \bibliographystyle{plainnat}
+}
+
+\RequirePackage{bibentry}
+\RequirePackage{natbib}
+\AtEndDocument{%
+  \begin{multicols}{2}
+  \setlength{\bibsep}{.2em}
+  \renewcommand{\bibfont}{\small}
+  \bibliography{../main}
+  \end{multicols}
 }
 
 \endinput
