--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -43,7 +43,7 @@
 
 \qte
   {pope-francis}
-  {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 lovebirds that the recipe for success lies in saying three simple words: `Please, thanks and sorry.'{}}
+  {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 \ul{lovebirds} that the recipe for success lies in saying three simple words: `\ul{Please}, \ul{thanks} and \ul{sorry}.'{}}
   {pope2014}
 
 \qte
@@ -51,5 +51,20 @@
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
   {nowak2005influence}
+
+\qte
+  [Thomas Fackler]
+  {thomas-fackler}
+  {Our results show that there is \ul{gravity} in online collaborations on GitHub. Traditional determinants of international trade such as \ul{language barriers} and \ul{country borders} matter for international code contributions.}
+  {fackler2020gravity}
+
+\qte
+  {nadzeya-laurentsyeva}
+  {The \ul{conflict} exerted a strong and persistent negative effect on the overall
+  Ukrainian-Russian collaboration as measured by Ukrainian contributions
+  to Russian projects and vice versa. The effect is \ul{symmetric} on the extensive margin.
+  However, on the intensive margine, Ukrainian programmers react stronger: conditional
+  on collaborating with Russians, they contribute to \ul{fewer} Russian projects.}
+  {laurentsyeva2019friends}
 
 \end{document}
