--- a/main.bib
+++ b/main.bib
@@ -1,5 +1,5 @@
 @article{raymond1999cathedral,
-  title={The Cathedral and the Bazaar},
+  title={{The Cathedral and the Bazaar}},
   author={Raymond, Eric},
   journal={Knowledge, Technology \& Policy},
   volume={12},
@@ -10,7 +10,7 @@
 }
 
 @book{fogel2005producing,
-  title={Producing Open Source Software: How to Run a Successful Free Software Project},
+  title={{Producing Open Source Software: How to Run a Successful Free Software Project}},
   author={Fogel, Karl},
   year={2005},
   publisher={O'Reilly Media, Inc.}
@@ -18,13 +18,14 @@
 
 @article{pope2014,
   author={Winfield, Nicole},
+  title={{Pope's Advice to Couples: Say `Please, Thanks and Sorry'}},
   journal={New York Post},
   month={2},
   year={2014}
 }
 
 @article{nowak2005influence,
-  title={The Influence of the Avatar on Online Perceptions of Anthropomorphism, Androgyny, Credibility, Homophily, and Attraction},
+  title={{The Influence of the Avatar on Online Perceptions of Anthropomorphism, Androgyny, Credibility, Homophily, and Attraction}},
   author={Nowak, Kristine L. and Rauh, Christian},
   journal={Journal of Computer-Mediated Communication},
   volume={11},
@@ -32,4 +33,21 @@
   pages={153--178},
   year={2005},
   publisher={Oxford University Press Oxford, UK}
+}
+
+@techreport{laurentsyeva2019friends,
+  title={{From Friends to Foes: National Identity and Collaboration in Diverse Teams}},
+  author={Laurentsyeva, Nadzeya},
+  year={2019},
+  institution={Ludwig-Maximilians-Universit{\"a}t M{\"u}nchen und Humboldt-Universit{\"a}t zu Berlin}
+}
+
+@inproceedings{fackler2020gravity,
+  title={{Gravity in Online Collaborations: Evidence from Github}},
+  author={Fackler, Thomas and Laurentsyeva, Nadzeya},
+  booktitle={{CESifo Forum}},
+  volume={21},
+  number={03},
+  pages={15--20},
+  year={2020},
 }
