--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -32,6 +32,7 @@
 % make small pull requests
 % one fix per one PR
 % ping architect in pull request
+% make descriptive commit messages
 
 % https://www.yegor256.com/2020/07/29/open-source-etiquette.html
 
