--- a/main.bib
+++ b/main.bib
@@ -51,3 +51,11 @@
   pages={15--20},
   year={2020},
 }
+
+@inproceedings{tsay2014let,
+  title={{Let's Talk About It: Evaluating Contributions Through Discussion in GitHub}},
+  author={Tsay, Jason and Dabbish, Laura and Herbsleb, James},
+  booktitle={{Proceedings of the 22nd International Symposium on Foundations of Software Engineering}},
+  pages={144--154},
+  year={2014}
+}
