--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -47,6 +47,12 @@
   {pope2014}
 
 \qte
+  [Jason Tsay]
+  {jason-tsay}
+  {We found that the level of a submitter's prior interaction on a project changed how politely developers discussed the contribution and the nature of proposed alternative solutions.}
+  {tsay2014let}
+
+\qte
   [Kristine Nowak]
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
