--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -49,7 +49,7 @@
 \qte
   [Jason Tsay]
   {jason-tsay}
-  {We found that the level of a submitter's prior interaction on a project changed how politely developers discussed the contribution and the nature of proposed alternative solutions.}
+  {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
   {tsay2014let}
 
 \qte
