--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -47,16 +47,28 @@
   {pope2014}
 
 \qte
-  [Jason Tsay]
-  {jason-tsay}
-  {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
-  {tsay2014let}
-
-\qte
   [Kristine Nowak]
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
   {nowak2005influence}
+
+\qte
+  [Josh Terrell]
+  {josh-terrell}
+  {Surprisingly, our results show that women's contributions tend to be accepted \ul{more often} than men’s. However, for contributors who are outsiders to a project and their gender is identifiable, men's acceptance rates are \ul{higher}.}
+  {terrell2017gender}
+
+\qte
+  [Nasif Imtiaz]
+  {nasif-imtiaz}
+  {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
+  {imtiaz2019investigating}
+
+\qte
+  [Reza Nadri]
+  {reza-nadri}
+  {We have identified that submitters perceptible as Hispanic and Black have 39\% of their pull requests rejected because they are seen as unnecessary, which is 10-12 percentage points more frequent than the rest of perceptible races.}
+  {nadri2021insights}
 
 \qte
   [Thomas Fackler]
