--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -29,6 +29,13 @@
 
 \pitch{.}
 
+\qte
+  [Jason Tsay]
+  {jason-tsay}
+  {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
+  {tsay2014let}
+
+
 % make small pull requests
 % one fix per one PR
 % ping architect in pull request
