--- a/main.bib
+++ b/main.bib
@@ -59,3 +59,32 @@
   pages={144--154},
   year={2014}
 }
+
+@article{terrell2017gender,
+  title={{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
+  author={Terrell, Josh and Kofink, Andrew and Middleton, Justin and Rainear, Clarissa and Murphy-Hill, Emerson and Parnin, Chris and Stallings, Jon},
+  journal={{PeerJ Computer Science}},
+  volume={3},
+  pages={e111},
+  year={2017},
+  publisher={PeerJ Inc.}
+}
+
+@inproceedings{imtiaz2019investigating,
+  title={{Investigating the Effects of Gender Bias on GitHub}},
+  author={Imtiaz, Nasif and Middleton, Justin and Chakraborty, Joymallya and Robson, Neill and Bai, Gina and Murphy-Hill, Emerson},
+  booktitle={{Proceedings of the 41st International Conference on Software Engineering (ICSE)}},
+  pages={700--711},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{nadri2021insights,
+  title={{Insights into Nonmerged Pull Requests in GitHub: Is There Evidence of Bias Based on Perceptible Race?}},
+  author={Nadri, Reza and Rodriguez-Perez, Gema and Nagappan, Meiyappan},
+  journal={IEEE Software},
+  volume={38},
+  number={2},
+  pages={51--57},
+  year={2021}
+}
