--- a/osbp.sty
+++ b/osbp.sty
@@ -45,7 +45,7 @@
 \end{pptMiddle}}
 
 \newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
-\newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\textcolor{gray}{#1}]{../faces/#2.jpg}{#3}{\textcolor{gray}{\small\bibentry{#4}}}}}
+\newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\color{gray}{#1}]{../faces/#2.jpg}{#3}{\par\color{gray}\rmfamily\scriptsize\bibentry{#4}}}}
 
 \AtBeginDocument{%
   \pptLeft{\thetitle{}}%
