--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -71,6 +71,12 @@
   {nadri2021insights}
 
 \qte
+  [Carolyn D. Egelman]
+  {carolyn-egelman}
+  {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
+  {egelman2020predicting}
+
+\qte
   [Thomas Fackler]
   {thomas-fackler}
   {Our results show that there is \ul{gravity} in online collaborations on GitHub. Traditional determinants of international trade such as \ul{language barriers} and \ul{country borders} matter for international code contributions.}
