--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -35,6 +35,11 @@
   {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
   {tsay2014let}
 
+\qte
+  [Carolyn D. Egelman]
+  {carolyn-egelman}
+  {Google categorizes CRs into specific sizes, these sizes are indicated as part of the code review tool and in the notification to the reviewer of the code change... The general advice is to split change requests for easier and quicker reviews when possible.}
+  {egelman2020predicting}
 
 % make small pull requests
 % one fix per one PR
