--- a/main.bib
+++ b/main.bib
@@ -88,3 +88,11 @@
   pages={51--57},
   year={2021}
 }
+
+@inproceedings{egelman2020predicting,
+  title={{Predicting Developers' Negative Feelings About Code Review}},
+  author={Egelman, Carolyn D. and Murphy-Hill, Emerson and Kammer, Elizabeth and Hodges, Margaret Morrow and Green, Collin and Jaspan, Ciera and Lin, James},
+  booktitle={{Proceedings of the 42nd International Conference on Software Engineering}},
+  pages={174--185},
+  year={2020}
+}
