--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -91,4 +91,12 @@
   on collaborating with Russians, they contribute to \ul{fewer} Russian projects.}
   {laurentsyeva2019friends}
 
+\qte
+  [Justin Middleton]
+  {justin-middleton}
+  {While we indeed find support for the idea that increases in activity correlate with a higher probability for membership, we also found the particular cases for which more activity can reduce the probability. This underscores the notion that software collaboration is much more than the code itself and that the social components of software should not be undervalued by software teams.}
+  {middleton2018contributions}
+
+
+
 \end{document}
