--- a/main.bib
+++ b/main.bib
@@ -96,3 +96,11 @@
   pages={174--185},
   year={2020}
 }
+
+@inproceedings{middleton2018contributions,
+  title={{Which Contributions Predict Whether Developers Are Accepted into Github Teams}},
+  author={Middleton, Justin and Murphy-Hill, Emerson and Green, Demetrius and Meade, Adam and Mayer, Roger and White, David and McDonald, Steve},
+  booktitle={{Proceedings of the 15th International Conference on Mining Software Repositories}},
+  pages={403--413},
+  year={2018}
+}
