--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -47,6 +47,12 @@
   {pope2014}
 
 \qte
+  [Courtney Miller]
+  {courtney-miller}
+  {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
+  {miller2022did}
+
+\qte
   [Kristine Nowak]
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
