--- a/main.bib
+++ b/main.bib
@@ -104,3 +104,11 @@
   pages={403--413},
   year={2018}
 }
+
+@inproceedings{miller2022did,
+  title={{``Did You Miss My Comment or What?'' understanding toxicity in open source discussions}},
+  author={Miller, Courtney and Cohen, Sophie and Klug, Daniel and Vasilescu, Bogdan and KaUstner, Christian},
+  booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
+  pages={710--722},
+  year={2022}
+}
