--- a/main.bib
+++ b/main.bib
@@ -112,3 +112,20 @@
   pages={710--722},
   year={2022}
 }
+
+@article{lu2022emojis,
+  title={{Emojis Predict Dropouts of Remote Workers: An Empirical Study of Emoji Usage on GitHub}},
+  author={Lu, Xuan and Ai, Wei and Chen, Zhenpeng and Cao, Yanbin and Mei, Qiaozhu},
+  journal={{PLOS One}},
+  volume={17},
+  number={1},
+  year={2022},
+}
+
+@article{mytton2016,
+  author={Mytton, David},
+  title={{What's the real reason Microsoft and Google are releasing open source?}},
+  journal={InfoWorld},
+  month={2},
+  year={2016},
+}
