--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -27,30 +27,23 @@
 
 \plush{\osbpTitlePage{1}{}}
 
-\pitch{.}
+\thought{Open source must be \ul{the only} way for you to write code}
 
-% talk to one person (address your comments to a nickname)
-% provide links to your opinions
-% make avatar
-% fill up your profile
-% please, thanks, sorry
-% stay online, don't discuss offline
+\qte
+  {david-mytton}
+  {When individuals release open source projects, their motivations are often \ul{altruistic}. However, the best companies are not open sourcing things for the altruism. There are real, \ul{strategic reasons} hidden behind the warm and fuzzy glow of open source.}
+  {mytton2016}
 
 \qte
   {karl-fogel}
   {Most free software projects fail.}
   {fogel2005producing}
 
-\qte
-  {pope-francis}
-  {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 \ul{lovebirds} that the recipe for success lies in saying three simple words: `\ul{Please}, \ul{thanks} and \ul{sorry}.'{}}
-  {pope2014}
+\thought{Always \ul{start} your message with a nickname of the person you are talking to}
 
-\qte
-  [Courtney Miller]
-  {courtney-miller}
-  {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
-  {miller2022did}
+\thought{In an argument, provide \ul{links} that support your point of view}
+
+\thought{Beautify your profile, start with an anthropomorphic avatar}
 
 \qte
   [Kristine Nowak]
@@ -65,12 +58,6 @@
   {terrell2017gender}
 
 \qte
-  [Nasif Imtiaz]
-  {nasif-imtiaz}
-  {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
-  {imtiaz2019investigating}
-
-\qte
   [Reza Nadri]
   {reza-nadri}
   {We have identified that submitters perceptible as Hispanic and Black have 39\% of their pull requests rejected because they are seen as unnecessary, which is 10-12 percentage points more frequent than the rest of perceptible races.}
@@ -81,6 +68,28 @@
   {carolyn-egelman}
   {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
   {egelman2020predicting}
+
+\thought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate}
+
+\thought{Be polite, especially when you are angry or disagree}
+
+\qte
+  [Courtney Miller]
+  {courtney-miller}
+  {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
+  {miller2022did}
+
+\qte
+  [Xuan Lu]
+  {xuan-lu}
+  {Developers who use emojis in their posts are significantly less likely to dropout from the online work platform.}
+  {lu2022emojis}
+
+\qte
+  [Nasif Imtiaz]
+  {nasif-imtiaz}
+  {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
+  {imtiaz2019investigating}
 
 \qte
   [Thomas Fackler]
@@ -103,6 +112,9 @@
   {While we indeed find support for the idea that increases in activity correlate with a higher probability for membership, we also found the particular cases for which more activity can reduce the probability. This underscores the notion that software collaboration is much more than the code itself and that the social components of software should not be undervalued by software teams.}
   {middleton2018contributions}
 
-
+\qte
+  {pope-francis}
+  {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 \ul{lovebirds} that the recipe for success lies in saying three simple words: `\ul{Please}, \ul{thanks} and \ul{sorry}.'{}}
+  {pope2014}
 
 \end{document}
