--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -30,16 +30,54 @@
 \thought{Open source must be \ul{the only} way for you to write code}
 
 \qte
+  [Naveen Raman]
+  {naveen-raman}
+  {Among the many reasons to contribute to open source, building one's professional \ul{reputation} and signaling one's skills to potential employers are common ones.}
+  {raman2020stress}
+
+\qte
   {david-mytton}
   {When individuals release open source projects, their motivations are often \ul{altruistic}. However, the best companies are not open sourcing things for the altruism. There are real, \ul{strategic reasons} hidden behind the warm and fuzzy glow of open source.}
   {mytton2016}
+
+\thought{Open source terrain has no mercy}
+
+\qte
+  [Yulia Tsvetkov]
+  {yulia-tsvetkov}
+  {Toxic language in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., Youtube), but also through open-source-specific displays of entitlement and urgency related to timing expectations.}
+  {raman2020stress}
+
+\qte
+  [Courtney Miller]
+  {courtney-miller}
+  {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
+  {miller2022did}
+
+\qte
+  [Isabella Ferreira]
+  {isabella-ferreira}
+  {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails. }
+  {ferreira2021shut}
 
 \qte
   {karl-fogel}
   {Most free software projects fail.}
   {fogel2005producing}
 
-\thought{Always \ul{start} your message with a nickname of the person you are talking to}
+\thought{Always \ul{start} your message with a nickname of the person who you are talking to}
+
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.7\linewidth]{discussion.png}
+  \par\columnbreak\par
+  Every message starts with a nickname of the person
+  who is the \ul{opponent} in the conversation.
+  \par
+  Github pull request:
+  \href{https://github.com/objectionary/eo/pull/2808}{objectionary/eo\#2808}
+  \end{multicols}
+}
 
 \thought{In an argument, provide \ul{links} that support your point of view}
 
@@ -54,7 +92,7 @@
 \qte
   [Josh Terrell]
   {josh-terrell}
-  {Surprisingly, our results show that women's contributions tend to be accepted \ul{more often} than men’s. However, for contributors who are outsiders to a project and their gender is identifiable, men's acceptance rates are \ul{higher}.}
+  {Surprisingly, our results show that women's contributions tend to be accepted \ul{more often} than men's. However, for contributors who are outsiders to a project and their gender is identifiable, men's acceptance rates are \ul{higher}.}
   {terrell2017gender}
 
 \qte
@@ -72,12 +110,6 @@
 \thought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate}
 
 \thought{Be polite, especially when you are angry or disagree}
-
-\qte
-  [Courtney Miller]
-  {courtney-miller}
-  {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
-  {miller2022did}
 
 \qte
   [Xuan Lu]
