--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -29,6 +29,18 @@
 
 \pitch{.}
 
+\qte
+  [Dabbish Laura]
+  {dabbish-laura.jpg}
+  {We found that projects in our sample \ul{did not} extensively discuss the addition or changes to the code of conduct.}
+  {li2021code}
+
+\qte
+  [Jack Jamieson]
+  {jack-jamieson}
+  {We found multiple significant relationships between value-related discussions and turnover, including that discussions about \ul{respectfulness} predict an increase in contributors leaving and a decrease in new contributors, while discussions about \ul{social power} predicted better contributor retention.}
+  {jamieson2023predicting}
+
 % how to contribute
 % style checking
 % style guides
