--- a/main.bib
+++ b/main.bib
@@ -129,3 +129,42 @@
   month={2},
   year={2016},
 }
+
+@inproceedings{raman2020stress,
+  title={{Stress and Burnout in Open Source: Toward Finding, Understanding, and Mitigating Unhealthy Interactions}},
+  author={Raman, Naveen and Cao, Minxuan and Tsvetkov, Yulia and K{\"a}stner, Christian and Vasilescu, Bogdan},
+  booktitle={{Proceedings of the 42nd International Conference on Software Engineering: New Ideas and Emerging Results}},
+  pages={57--60},
+  year={2020}
+}
+
+@article{li2021code,
+  title={{Code of Conduct Conversations in Open Source Software Projects on Github}},
+  author={Li, Renee and Pandurangan, Pavitthra and Frluckaj, Hana and Dabbish, Laura},
+  journal={{Proceedings of the ACM on Human-Computer Interaction}},
+  volume={5},
+  number={CSCW1},
+  pages={1--31},
+  year={2021},
+  publisher={ACM}
+}
+
+@inproceedings{jamieson2023predicting,
+  title={{Predicting Open Source Contributor Turnover from Value-Related Discussions: An Analysis of GitHub Issues}},
+  author={Jamieson, Jack and Yamashita, Naomi and Foong, Eureka},
+  booktitle={{Proceedings of the 46th International Conference on Software Engineering}},
+  pages={667--679},
+  year={2023},
+  organization={IEEE Computer Society}
+}
+
+@article{ferreira2021shut,
+  title={{The ``Shut the f** k up'' Phenomenon: Characterizing Incivility in Open Source Code Review Discussions}},
+  author={Ferreira, Isabella and Cheng, Jinghui and Adams, Bram},
+  journal={{Proceedings of the ACM on Human-Computer Interaction}},
+  volume={5},
+  number={CSCW2},
+  pages={1--35},
+  year={2021},
+  publisher={ACM}
+}
