--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -27,7 +27,7 @@
 
 \plush{\osbpTitlePage{1}{}}
 
-\thought{Open source must be \ul{the only} way for you to write code}
+\thought{Open source must be \ul{the only} way for you to write code.}
 
 \qte
   [Naveen Raman]
@@ -40,7 +40,7 @@
   {When individuals release open source projects, their motivations are often \ul{altruistic}. However, the best companies are not open sourcing things for the altruism. There are real, \ul{strategic reasons} hidden behind the warm and fuzzy glow of open source.}
   {mytton2016}
 
-\thought{Open source terrain has no mercy}
+\thought{Be fully prepared for the toxicity of open source terrain.}
 
 \qte
   [Yulia Tsvetkov]
@@ -62,10 +62,10 @@
 
 \qte
   {karl-fogel}
-  {Most free software projects fail.}
+  {Most \ul{free} software projects \ul{fail}.}
   {fogel2005producing}
 
-\thought{Always \ul{start} your message with a nickname of the person who you are talking to}
+\thought{Always \ul{start} your message with a nickname of the person who you are talking to.}
 
 \pitch{
   \begin{multicols}{2}
@@ -79,9 +79,9 @@
   \end{multicols}
 }
 
-\thought{In an argument, provide \ul{links} that support your point of view}
+\thought{In an argument, provide \ul{links} that support your point of view.}
 
-\thought{Beautify your profile, start with an anthropomorphic avatar}
+\thought{Beautify your profile, start with an anthropomorphic avatar.}
 
 \qte
   [Kristine Nowak]
@@ -107,9 +107,18 @@
   {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
   {egelman2020predicting}
 
-\thought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate}
+\pitch{\includegraphics[width=.75\linewidth]{monica.png}}
 
-\thought{Be polite, especially when you are angry or disagree}
+\thought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
+
+\qte
+  {mark-warschauer}
+  {The findings showed a tendency toward \ul{more equal} participation in computer mode. Students used language which is lexically and syntactically \ul{more formal} and complex in electronic discussion than they did in face-to-face discussion, thus demonstrating another possible advantage of computer-mediated communication.}
+  {warschauer1995comparing}
+
+\plush{\includegraphics[width=\linewidth]{face-to-face.png}}
+
+\thought{Be polite, especially when you are angry or disagree.}
 
 \qte
   [Xuan Lu]
