--- a/main.bib
+++ b/main.bib
@@ -168,3 +168,12 @@
   year={2021},
   publisher={ACM}
 }
+
+@article{warschauer1995comparing,
+  title={{Comparing Face-to-Face and Electronic Discussion in the Second Language Classroom}},
+  author={Warschauer, Mark},
+  journal={{CALICO Journal}},
+  pages={7--26},
+  year={1995},
+  publisher={JSTOR}
+}
