--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -118,6 +118,12 @@
 
 \plush{\includegraphics[width=\linewidth]{face-to-face.png}}
 
+\qte
+  [Verena Ebert]
+  {verena-ebert}
+  {Developers use many channels. Previously, mailing lists were very common. Nowadays, other communication channels become more and more popular, for example, Slack, issue trackers, Twitter or Gitter.}
+  {ebert2022communication}
+
 \thought{Be polite, especially when you are angry or disagree.}
 
 \qte
