--- a/main.bib
+++ b/main.bib
@@ -177,3 +177,11 @@
   year={1995},
   publisher={JSTOR}
 }
+
+@inproceedings{ebert2022communication,
+  title={{How Are Communication Channels on GitHub Presented to Their Intended Audience?---A Thematic Analysis}},
+  author={Ebert, Verena and Graziotin, Daniel and Wagner, Stefan},
+  booktitle={Proceedings of the 26th International Conference on Evaluation and Assessment in Software Engineering},
+  pages={40--49},
+  year={2022}
+}
