--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -102,6 +102,12 @@
   {nadri2021insights}
 
 \qte
+  [Nasif Imtiaz]
+  {nasif-imtiaz}
+  {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
+  {imtiaz2019investigating}
+
+\qte
   [Carolyn D. Egelman]
   {carolyn-egelman}
   {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
@@ -116,13 +122,15 @@
   {The findings showed a tendency toward \ul{more equal} participation in computer mode. Students used language which is lexically and syntactically \ul{more formal} and complex in electronic discussion than they did in face-to-face discussion, thus demonstrating another possible advantage of computer-mediated communication.}
   {warschauer1995comparing}
 
-\plush{\includegraphics[width=\linewidth]{face-to-face.png}}
+\pitch{\includegraphics[width=\linewidth]{face-to-face.png}}
 
 \qte
   [Verena Ebert]
   {verena-ebert}
   {Developers use many channels. Previously, mailing lists were very common. Nowadays, other communication channels become more and more popular, for example, Slack, issue trackers, Twitter or Gitter.}
   {ebert2022communication}
+
+\pitch{\includegraphics[width=.9\linewidth]{channels.png}}
 
 \thought{Be polite, especially when you are angry or disagree.}
 
@@ -131,12 +139,6 @@
   {xuan-lu}
   {Developers who use emojis in their posts are significantly less likely to dropout from the online work platform.}
   {lu2022emojis}
-
-\qte
-  [Nasif Imtiaz]
-  {nasif-imtiaz}
-  {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
-  {imtiaz2019investigating}
 
 \qte
   [Thomas Fackler]
